Created and added the Record data model and also implemented the CRUD operations on them.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -30,7 +30,7 @@
                             <td>{{ record.state }}</td>
                             <td>{{ record.zipcode }}</td>
                             <td>{{ record.created_at }}</td>
-                            <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
+                            <td><a href="{% url 'record_retrieve' record.id %}">{{ record.id }}</a></td>
                         </tr>
                     {% endfor %}
                 {% endif %}
