--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -8,7 +8,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Add Record</a>
+                        <a class="nav-link" href="{% url 'record_create' %}">Add Record</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
